# atlapool

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml  publish-image.yml
docs/adr/: 0001-adopt-rust-stack-for-atlapool.md  0002-env-secret-resolver.md  0003-jira-rest-proxy-f2a.md  0004-per-agent-allowlist.md  0005-mcp-endpoint-f1.md  0006-write-gate-f4.md  0007-aws-secrets-manager-f5b.md  0008-gcp-secret-manager-f5c.md  0009-audit-log-f7.md  0010-healthz-f8.md  0011-confluence-read-f2b.md  0012-atlassian-auth-cloud-id.md  0013-v11-write-tools.md  0014-bearer-confluence-v2.md  0015-bitbucket-read-tools.md  0016-cleanup-email-and-service-account-scopes.md  0017-bitbucket-write-tools.md  0018-jira-issue-key-validation.md  0019-audit-result-log.md  0020-readme-major-rewrite.md  0021-wire-mcp-config-flags.md  0022-confluence-create-page-parent-id.md  0023-bitbucket-short-lived-credentials.md  0024-ghcr-image-publish.md  0025-jira-update-and-transitions.md  0026-bitbucket-browse-tools.md  0027-mcp-initialize-tools-list.md  0028-bitbucket-merge-pull-request.md  0029-bitbucket-pr-ops-batch1.md  0030-bitbucket-add-pr-comment.md  0031-bitbucket-list-pull-requests.md  0032-bitbucket-list-pr-changes.md  0033-bitbucket-pipeline-status.md  0034-bitbucket-get-pull-request-diff.md  0035-jira-search-issues.md  0036-confluence-list-delete-page.md  0037-jira-list-comments-confluence-get-page-by-title.md
src/: agents.rs  audit.rs  bitbucket.rs  bitbucket_token.rs  config.rs  confluence.rs  main.rs  mcp.rs  secrets.rs  upstream.rs
